# hearGOD

./: .gitignore  CMakeLists.txt  Dự án Binaural Render Engine.md  PEQdB Diamond β.txt  README.md
.github/workflows/: ci.yml  release.yml
diagrams/: code-deps.excalidraw  code-deps.mmd  signal-flow.excalidraw  signal-flow.mmd
eq/: HIFIMAN HE400SE 10 Filters.txt  Hifiman HE400se Filters.txt  ic100_dsp.txt
include/hearGOD/: biquad_chain.h  channel_router.h  config_file.h  dfe_compensator.h  fdl.h  head_rotation.h  head_tracker.h  nuols_engine.h  peq_parser.h  portaudio_backend.h  sofa_loader.h  tracking_controller.h  types.h
src/: main.cpp
src/audio/: channel_router.cpp  portaudio_backend.cpp
src/config/: config_file.cpp
src/core/: dfe_compensator.cpp  fdl.cpp  nuols_engine.cpp  tracking_controller.cpp
src/eq/: biquad_chain.cpp  peq_parser.cpp
src/gui/: EQGraph.cpp  EQGraph.h  HRIRPanel.cpp  HRIRPanel.h  HearGodAudioProcessor.cpp  HearGodAudioProcessor.h  LevelMeter.cpp  LevelMeter.h  LogPanel.cpp  LogPanel.h  MainComponent.cpp  MainComponent.h  MainComponent_controls.cpp  MainComponent_device.cpp  MainComponent_files.cpp  MainComponent_profiles.cpp  MainComponent_state.cpp  MainWindow.cpp  MainWindow.h  MultiChannelMeter.cpp  MultiChannelMeter.h  SystemAudioSwitch.cpp  SystemAudioSwitch.h  main_juce.cpp
src/io/: head_tracker.cpp  sofa_loader.cpp
tests/: test_biquad.cpp  test_fdl.cpp  test_head_rotation.cpp  test_head_tracker.cpp  test_integration.cpp  test_peq.cpp  test_sofa.cpp
